--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tasks (0.9.1-1ubuntu1) unstable; urgency=medium
+
+  * Add Python bindings
+
+ -- Pierre Gergondet <pierre.gergondet+ppa@gmail.com>  Fri, 09 Jun 2017 18:34:32 +0900
+
 tasks (0.9.0-1trusty1) trusty; urgency=medium
 
   * Initial release.
